--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__
 .DS_Store
 .cache
 .ipynb_checkpoints
+_prettierrc.json
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
